Kubernetes/class/ds.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: ds1
spec:
  selector:
    matchLabels:
      system: ds1
  template:
    metadata:
      labels:
        system: ds1
    spec:
      containers:
      - name: nginx
        image: nginx:1.15.1
        ports:
        - containerPort: 80
