Kubernetes/class/ds2.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: ds2
spec:
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      system: ds2
  template:
    metadata:
      labels:
        system: ds2
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
