Kubernetes/class/ss.yaml
apiVersion: v1
kind: Pod
metadata:
  name: shell-demo
spec:
  containers:
  - name: nginx
    image: nginx
    volumeMounts:
    - name: color-vol
      mountPath: /flow
  volumes:
    - name: color-vol
      configMap:
        name: colors
