Kubernetes/class/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ghost
spec:
  rules:
  - host: ghost.192.168.99.102.nip.io
    http:
      paths:
      - backend:
          serviceName: ghost
          servicePort: 2368
  - host: kirin.192.168.99.102.nip.io
    http:
      paths:
      - backend:
          serviceName: kirin
          servicePort: 80
